[project]
name = "movie"
version = "0.2.2"
description = "Data Processing of movies"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "numpy>=2.0.1",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true 


[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
[project.scripts]
mov-ping = 'mov.cli:ping'

[project.urls]
Homepage = "https://github.com/EstherCho-7/movie"
Issues = "https://github.com/EstherCho-7/movie/issues"

